--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -18,7 +18,7 @@
         {% endfor %}
     </div>
 
-    <div class="outer-border"> <!-- الإطار الخارجي -->
+    <div class="outer-border"> 
         <div class="container">
             <!-- Signup Section -->
             <div class="signup-container">
