--- a/TaskManager/static/css/registerstyle.css
+++ b/TaskManager/static/css/registerstyle.css
@@ -169,8 +169,8 @@ button:hover {
     cursor: pointer;
     margin-left: 10px;
     padding: 0;
-    opacity: 1; /* تأكد من أن الزر غير شفاف */
-     z-index: 1; /* تأكد من أن الزر فوق العناصر الأخرى */
+    opacity: 1; 
+    z-index: 1; 
 }
 
 .alert button:hover {
