add fav icon and fix system message for login

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Management</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/fav.png' %}">
+
 
     <!-- CSS FILE -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/core.css' %}">
@@ -31,6 +33,7 @@
                         <li><a href="{% url 'core:about' %}">About</a></li>
                     </ul>
                 </div>
+                <link rel="icon" type="image/x-icon" href="{% static '/static/imgs/delegation.png'%}">
             </nav>
             <div class="links">
                 <ul>
