--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="{% static 'css/about.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/fav.png' %}">
+
 </head>
 <body>
     <div class="container">
