--- a/templates/tasks/manager_tasks.html
+++ b/templates/tasks/manager_tasks.html
@@ -7,6 +7,8 @@
     <title>Admin Dashboard - Task Management</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/fav.png' %}">
+
 </head>
 <body>
     <!-- System Messages -->
