--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="{% static 'css/loginstyle.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/fav.png' %}">
+
 </head>
 <body>
 
