--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="{% static 'css/registerstyle.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/fav.png' %}">
+
 </head>
 <body>
     <div class="messages">
